fix: prevent Table of Contents from overlapping blog post content

--- a/app/_components/main/Main.module.scss
+++ b/app/_components/main/Main.module.scss
@@ -20,7 +20,7 @@
     max-width: 100dvw;
 
     @media (width > 993px) {
-      max-width: 60dvw;
+      max-width: 80dvw;
       width: 100%;
     }
   }
